fixes scroll bar overflow issues in menubar

--- a/SimpleSeer/static/app/styles/toolbar.less
+++ b/SimpleSeer/static/app/styles/toolbar.less
@@ -119,7 +119,7 @@
     display: block;
     left: 0px;
     top: 0px;
-    width: 237px;
+    /*width: 237px;*/
 
     border: none;
     border-radius: 0px;
